--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,38 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <form method="post" action="{{ path('send_message') }}">
-        <fieldset>
-            <legend>Send a new Message</legend>
-            <div>
-                <label>User</label>
-            </div>
-            <div>
-                <select name="userId">
-                    {% for user in users %}
-                        <option value="{{ user.getId() }}">{{ user.getName() }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div>
-                <label>Number</label>
-            </div>
-            <div>
-                <select name="numberId">
-                    {% for number in numbers %}
-                        <option value="{{ number.getId() }}">{{ number.getNumber() }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div>
-                <label>Message</label>
-            </div>
-            <div>
-                <textarea name="message"></textarea>
-            </div>
-            <div>
-                <input type="submit" value="Send" />
-            </div>
-        </fieldset>
-    </form>
+    <ul>
+        <li>
+            <a href="https://github.com/oxidmod/Messages/blob/master/src/Application/Command/AggregateLog/AggregateLogHandler.php" target="_blank">Task 1 (SQL)</a>
+        </li>
+        <li>
+            <a href="https://github.com/oxidmod/Messages/blob/master/src/Application/Query/AggregatedLog/AggregatedLogHandler.php" target="_blank">Task 2 (PHP)</a>
+        </li>
+        <li>
+            <a href="{{ path('get_logs') }}">Task 3 (Front end)</a>
+        </li>
+        <li>
+            <a href="{{ path('send_message') }}">Send message</a>
+        </li>
+    </ul>
 {% endblock %}
