--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <a href="{{ path('index') }}">Index page</a>
+        <hr />
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
